--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowInfo.cs" />
+    <Compile Include="ShowState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
