--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -75,6 +75,18 @@
     <Compile Include="FrmSearchTemplet.Designer.cs">
       <DependentUpon>FrmSearchTemplet.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSelectShow.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FrmSelectShow.Designer.cs">
+      <DependentUpon>FrmSelectShow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmShow.Designer.cs">
+      <DependentUpon>FrmShow.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmShowSetting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +112,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmSearchTemplet.resx">
       <DependentUpon>FrmSearchTemplet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSelectShow.resx">
+      <DependentUpon>FrmSelectShow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmShow.resx">
+      <DependentUpon>FrmShow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmShowSetting.resx">
       <DependentUpon>FrmShowSetting.cs</DependentUpon>
