--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="DalAreaInfo.cs" />
     <Compile Include="DalConfiguration.cs" />
+    <Compile Include="DalEmployee.cs" />
     <Compile Include="DalShowInfo.cs" />
+    <Compile Include="DalEmpPowers.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
