--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -41,7 +41,13 @@
   <ItemGroup>
     <Compile Include="AreaInfo.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="CurrentInfo.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="EmpPowers.cs" />
+    <Compile Include="GetOrSetConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registry.cs" />
+    <Compile Include="SelectOrder.cs" />
     <Compile Include="ShowInfo.cs" />
     <Compile Include="ShowState.cs" />
   </ItemGroup>
