--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaInfo.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="CurrentInfo.cs" />
     <Compile Include="Employee.cs" />
@@ -47,7 +48,7 @@
     <Compile Include="GetOrSetConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
-    <Compile Include="SelectOrder.cs" />
+    <Compile Include="CommonInfo.cs" />
     <Compile Include="ShowInfo.cs" />
     <Compile Include="ShowState.cs" />
   </ItemGroup>
