--- a/UI/app.config
+++ b/UI/app.config
@@ -1,9 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="GUIDEConnectionString" connectionString="Data Source=EMEWE-PC;Initial Catalog=GUIDE;Persist Security Info=True;User ID=sa;Password=yangyunping123"
-            providerName="System.Data.SqlClient" />
+        <add name="GUIDEConnectionString" connectionString="Data Source=EMEWE-PC;Initial Catalog=GUIDE;Persist Security Info=True;User ID=sa;Password=yangyunping123" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
