--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
     <Compile Include="CommonInfo.cs" />
+    <Compile Include="ShowContent.cs" />
     <Compile Include="ShowInfo.cs" />
     <Compile Include="ShowState.cs" />
   </ItemGroup>
