--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
     <Compile Include="CommonInfo.cs" />
+    <Compile Include="Screen.cs" />
     <Compile Include="ShowContent.cs" />
     <Compile Include="ShowInfo.cs" />
-    <Compile Include="ShowState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
