--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -172,6 +172,12 @@
     <Compile Include="FrmSreen.Designer.cs">
       <DependentUpon>FrmSreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmEncrypt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEncrypt.designer.cs">
+      <DependentUpon>FrmEncrypt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmAddArea.resx">
@@ -219,6 +225,9 @@
     <EmbeddedResource Include="FrmSreen.resx">
       <DependentUpon>FrmSreen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmEncrypt.resx">
+      <DependentUpon>FrmEncrypt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -230,7 +239,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
