--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -38,7 +38,9 @@
       <HintPath>C:\Users\EMEWE\Desktop\Json110r2\Bin\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,7 +54,9 @@
     <Compile Include="CurrentInfo.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="EmpPowers.cs" />
+    <Compile Include="EQ2008_DataStruct.cs" />
     <Compile Include="GetOrSetConfig.cs" />
+    <Compile Include="LEDShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
     <Compile Include="CommonInfo.cs" />
