--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -125,7 +125,7 @@
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmPassword.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmPassword.Designer.cs">
       <DependentUpon>FrmPassword.cs</DependentUpon>
@@ -137,7 +137,7 @@
       <DependentUpon>FrmSearchTemplet.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmSelectShow.cs">
-      <SubType>UserControl</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmSelectShow.Designer.cs">
       <DependentUpon>FrmSelectShow.cs</DependentUpon>
@@ -238,7 +238,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -310,6 +312,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\clock_alt.png" />
     <None Include="Resources\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
