--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -196,6 +196,12 @@
     <Compile Include="FrmEncrypt.designer.cs">
       <DependentUpon>FrmEncrypt.cs</DependentUpon>
     </Compile>
+    <Compile Include="LED\FrmTempletLED.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LED\FrmTempletLED.Designer.cs">
+      <DependentUpon>FrmTempletLED.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmAddArea.resx">
@@ -254,6 +260,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEncrypt.resx">
       <DependentUpon>FrmEncrypt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LED\FrmTempletLED.resx">
+      <DependentUpon>FrmTempletLED.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
