--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DalConfig.cs" />
     <Compile Include="DalConfiguration.cs" />
     <Compile Include="DalEmployee.cs" />
+    <Compile Include="DalLedShowInfo.cs" />
     <Compile Include="DalScreen.cs" />
     <Compile Include="DalShowInfo.cs" />
     <Compile Include="DalEmpPowers.cs" />
