--- a/MODEL/MODEL.csproj
+++ b/MODEL/MODEL.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
     <Compile Include="CommonInfo.cs" />
+    <Compile Include="ScreeenSetting.cs" />
     <Compile Include="Screens.cs" />
     <Compile Include="ShowContent.cs" />
     <Compile Include="ShowInfo.cs" />
