--- a/UI/app.config
+++ b/UI/app.config
@@ -7,6 +7,6 @@
     </connectionStrings>
    <appSettings>
        <add key="sEncryptionKey"   value="emewesoft"/>
-       <add key="LEDFontSize"   value="24"/>
+       <add key="PlaySpeed"   value="9"/>
    </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
